src/test/deca/context/valid/provided/ExtandsClass.deca
class A {
protected int x;
}
class B extends A {
protected int y;
protected int x;
}
