src/test/deca/context/invalid/provided/testi32.deca
class A{
    protected int x;
}
class B extends A {
int getX(A a) {
return a.x;
}
}
